<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        app:layout_scrollFlags="scroll|enterAlways">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            app:popupTheme="@style/Theme.Material3.Light"
            app:layout_scrollFlags="scroll|enterAlways">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting"
                style="@style/titile" />

        </androidx.appcompat.widget.Toolbar>

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/green" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ScrollView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            android:background="@color/white">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <TextView
                    android:id="@+id/tag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Myaccount"
                    android:layout_alignParentLeft="true"
                    android:layout_marginTop="20dp" />

                <TextView
                    android:id="@+id/infor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tag"
                    android:text="@string/infor"
                    android:textSize="17dp"
                    android:padding="17dp"
                    android:background="@drawable/cus_backgr_setting"
                    android:drawableRight="@drawable/baseline_navigate_next_24"/>

                <TextView
                    android:id="@+id/tag1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Settings"
                    android:layout_marginTop="20dp"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/infor"/>

                <!--<TextView
                    android:id="@+id/language"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/language"
                    android:layout_below="@+id/tag1"
                    android:textSize="17dp"
                    android:padding="17dp"
                    android:background="@drawable/cus_backgr_setting"
                    android:drawableRight="@drawable/baseline_navigate_next_24"/>-->

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/cus_backgr_setting"
                    android:layout_below="@+id/tag1"
                    android:padding="17dp"
                    />

                <TextView
                    android:id="@+id/Notification"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Notification_Settings"
                    android:layout_below="@+id/spinner"
                    android:textSize="17dp"
                    android:padding="17dp"
                    android:layout_marginTop="0.8dp"
                    android:background="@drawable/cus_backgr_setting"
                    android:drawableRight="@drawable/baseline_navigate_next_24"/>

                <TextView
                    android:id="@+id/tag2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Support"
                    android:layout_marginTop="20dp"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/Notification"/>

                <TextView
                    android:id="@+id/support"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/About"
                    android:textSize="17dp"
                    android:padding="17dp"
                    android:background="@drawable/cus_backgr_setting"
                    android:drawableRight="@drawable/baseline_navigate_next_24"
                    android:layout_below="@id/tag2"/>

                <TextView
                    android:id="@+id/support2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/HelpCentre"
                    android:textSize="17dp"
                    android:padding="17dp"
                    android:background="@drawable/cus_backgr_setting"
                    android:drawableRight="@drawable/baseline_navigate_next_24"
                    android:layout_below="@id/support"
                    android:layout_marginTop="0.8dp"/>

                <Button
                    android:id="@+id/btn_Logout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/cus_btn_yellow"
                    app:backgroundTint="@null"
                    android:text="@string/Logout"
                    android:textColor="@color/black"
                    android:textSize="18dp"
                    android:padding="13dp"
                    android:layout_marginLeft="17dp"
                    android:layout_marginRight="17dp"
                    android:layout_marginTop="50dp"
                    android:layout_below="@+id/support2"/>

            </RelativeLayout>

        </ScrollView>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>