<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.Account_Security_Activity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="10dp"
            android:background="@color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/btn_Back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baseline_arrow_back_24"
                    android:scaleX="1.5"
                    android:scaleY="1.5"
                    android:padding="8dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/infor"
                    style="@style/titile"
                    android:layout_marginRight="15dp"/>

            </LinearLayout>

        </androidx.appcompat.widget.Toolbar>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:layout_below="@id/toolbar">

            <androidx.cardview.widget.CardView

                android:id="@+id/cardview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                app:contentPadding="8dp"
                app:cardElevation="8dp"
                app:cardBackgroundColor="@color/white">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/myprofile"
                        android:text="@string/myprofile"
                        style="@style/account_security"/>


                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/grey"
                        android:layout_below="@id/myprofile"
                        android:layout_marginLeft="15dp"/>

                    <LinearLayout
                        android:id="@+id/view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_below="@+id/myprofile">

                        <TextView
                            android:id="@+id/email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/email"
                            android:textSize="17dp"
                            android:padding="15dp"
                            android:layout_weight="1"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="ngocanhdhkt764@gmail.com"
                            android:maxLines="1"
                            android:inputType="text"
                            android:drawableRight="@drawable/baseline_navigate_next_24"
                            android:layout_gravity="center_vertical"
                            android:paddingRight="15dp"/>

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/grey"
                        android:layout_below="@id/view"
                        android:layout_marginLeft="15dp"/>

                    <TextView
                        android:id="@+id/phone"
                        android:layout_below="@+id/view"
                        android:text="@string/phone"
                        android:inputType="number"
                        style="@style/account_security"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/grey"
                        android:layout_below="@id/phone"
                        android:layout_marginLeft="15dp"/>

                    <TextView
                        android:id="@+id/change_pass"
                        android:layout_below="@+id/phone"
                        android:text="@string/ChangePassword"
                        style="@style/account_security"/>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

        </ScrollView>

    </RelativeLayout>


</RelativeLayout>