<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.Login_Activity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/backgr_oto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:scaleType="centerCrop"
            android:src="@drawable/backgr_oto" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="170dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            app:cardElevation="8dp"
            app:contentPadding="8dp"
            app:shapeAppearanceOverlay="@style/RoundedTopCorners"
            app:cardBackgroundColor="@color/white">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/welcome"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="@string/welcome"
                        style="@style/hello" />

                    <TextView
                        android:id="@+id/decription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Decription"
                        android:layout_below="@+id/welcome"
                        android:fontFamily="cursive"
                        android:textColor="@color/green"
                        android:gravity="center_horizontal"
                        android:textSize="15dp"
                        android:textStyle="bold"/>

                    <View
                        android:id="@+id/view"
                        android:layout_width="110dp"
                        android:layout_height="110dp"
                        android:background="@drawable/image"
                        android:layout_below="@id/decription"
                        android:layout_centerHorizontal="true"/>

                    <Button
                        android:id="@+id/btn_Signin"
                        android:layout_below="@+id/view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="@string/signin"
                        style="@style/btn_signin"
                        android:layout_marginTop="10dp"
                        app:backgroundTint="@null"/>

                    <Button
                        android:id="@+id/btn_Signup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/btn_Signin"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="15dp"
                        android:text="@string/signup"
                        style="@style/btn_signin"
                        app:backgroundTint="@null" />

                    <TextView
                        android:id="@+id/other"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/btn_Signup"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="15dp"
                        android:text="@string/or_continue_with"
                        style="@style/or_continue_with"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_below="@+id/other"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:layout_alignParentBottom="true">

                        <ImageView
                            android:id="@+id/img_Google"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:scaleType="fitCenter"
                            android:src="@drawable/google_logo" />

                        <ImageView
                            android:id="@+id/img_Fb"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_marginStart="20dp"
                            android:scaleType="fitCenter"
                            android:src="@drawable/facebook_logo" />

                    </LinearLayout>

                    <ProgressBar
                        android:id="@+id/progressBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:indeterminateTint="@color/white"
                        android:visibility="gone" />

                </RelativeLayout>

            </ScrollView>

        </com.google.android.material.card.MaterialCardView>

    </RelativeLayout>

</RelativeLayout>